[package]
name = "uc-tauri"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Tauri adapter layer for UniClipboard"

[features]
# 透传到 uc-platform/dev-profile，仅供 `bun tauri:build:dev` 使用。
dev-profile = ["uc-platform/dev-profile"]

[dependencies]
# Workspace crates
uc-core = { path = "../uc-core" }
uc-application = { path = "../uc-application" }
uc-infra = { path = "../uc-infra" }
uc-platform = { path = "../uc-platform" }
uc-bootstrap = { path = "../uc-bootstrap" }
uc-desktop = { path = "../uc-desktop" }
uc-daemon-contract = { path = "../uc-daemon-contract" }
uc-daemon-local = { path = "../uc-daemon-local" }
uc-daemon-client = { path = "../uc-daemon-client" }

# Tauri
tauri = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
url = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging — `log::*` macros consumed by `tauri-plugin-log` builder configuration.
log = "0.4"
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }

# Tracing support
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSScreen", "NSPanel", "NSResponder", "NSWindow", "NSColor", "NSGraphics"] }
core-graphics = "0.24"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "objc2-core-foundation"] }

[dev-dependencies]
uc-platform = { path = "../uc-platform", features = ["test-helpers"] }
sentry = { version = "0.48.1", features = ["test"] }
tauri = { workspace = true, features = ["test"] }
tempfile = "3"
mockall = "0.13"
tokio = { version = "1", features = ["full", "test-util"] }
