[package]
name = "uc-tauri"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Tauri adapter layer for UniClipboard"

[features]
# Previously forwarded to uc-bootstrap/dev-profile -> uc-platform/dev-profile.
# The GUI client is now a pure client of the external daemon and resolves paths
# via uc-app-paths (runtime UC_PROFILE env var); the compile-time dev-profile
# feature only matters for the daemon binary (uc-daemon crate). Kept as a no-op
# so the existing feature chain (workspace root -> uc-tauri) doesn't break.
dev-profile = []

[dependencies]
# Workspace crates
# `specta-derive` 让 `TraceMetadata`（出现在每个 Tauri command 的 `_trace`
# 入参里）派生 `specta::Type`，从而能进 tauri-specta 的 binding 生成。
uc-core = { path = "../../../crates/uc-core", features = ["specta-derive"] }
uc-desktop = { path = "../../../crates/uc-desktop" }
uc-observability = { path = "../../../crates/uc-observability" }
uc-daemon-contract = { path = "../../../crates/uc-daemon-contract" }
uc-daemon-client = { path = "../../../crates/uc-daemon-client" }
uc-daemon-process = { path = "../../../crates/uc-daemon-process" }
# Portable-build detection (updater install-kind routing on Windows).
uc-app-paths = { path = "../../../crates/uc-app-paths" }

# Tauri
tauri = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
# Native save/open file dialogs for config import/export (issue #1110). The
# dialogs are driven from Rust commands (`app.dialog().file()`), not the JS
# guest bindings, so no `@tauri-apps/plugin-dialog` npm package is needed.
tauri-plugin-dialog = "2"
url = "2"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rand = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# tauri-specta 生态 — IPC 类型化客户端 codegen（见 issue #698）。
# - specta: 提供 `Type` 派生 + `collect_commands!`
# - specta-typescript: TS 输出器
# - tauri-specta: 把 `#[tauri::command]` + `#[specta::specta]` 联到一起，
#   `Builder::invoke_handler()` 直接喂给 `tauri::Builder::invoke_handler`。
#
# 版本钉到 2.0.0-rc.25 / 0.0.12（issue #698 调研选定）。toolchain 已在
# src-tauri/rust-toolchain.toml 钉到 stable 1.95，满足 rc.24+ 内部
# `debug_closure_helpers` 等 feature 的 Rust 1.94+ 要求。
# RC 期 minor 版本不保证 API 稳定，升级前必须重跑
# `cargo test -p uc-tauri --test specta_export` 验证 binding 无 schema drift。
specta = { version = "=2.0.0-rc.25", features = ["derive", "uuid"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging — `log::*` macros consumed by `tauri-plugin-log` builder configuration.
log = "0.4"
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }

# Tracing support
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux tray-icon 走 libappindicator-rs，后者用 once_cell::Lazy 包了
# dlopen，找不到 libayatana-appindicator3 时直接 panic!()。我们的 binary
# release profile = "abort"，catch_unwind 无法接住，所以必须在调用
# TrayIconBuilder::build 之前用 libloading 自己探一遍 4 个候选 .so，
# 没一个能加载就跳过 tray init 而不是让上游 panic 撂倒整个进程。
# 版本钉到 0.7 — 与 Cargo.lock 现有的间接依赖对齐避免双版本膨胀。
libloading = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    # Suspend/resume notification for the update scheduler's wake source
    # (resume_listener_windows.rs): RegisterSuspendResumeNotification +
    # DEVICE_NOTIFY_SUBSCRIBE_PARAMETERS live under Win32_System_Power.
    "Win32_System_Power",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSEvent", "NSScreen", "NSPanel", "NSResponder", "NSWindow", "NSColor", "NSGraphics", "NSWorkspace", "NSRunningApplication", "NSStackView", "NSProgressIndicator", "NSTextField", "NSText", "NSButton", "NSControl", "NSCell", "NSView", "NSVisualEffectView", "NSLayoutConstraint", "NSFont", "objc2-quartz-core", "libc"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
core-graphics = "0.24"
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSGeometry", "objc2-core-foundation", "NSBackgroundActivityScheduler", "NSString", "NSDate", "block2"] }
# block2 drives the NSBackgroundActivityScheduler completion-handler block used
# by the update scheduler's macOS wake source (background_activity_macos.rs).
block2 = "0.6"

[dev-dependencies]
sentry = { version = "0.48.1", default-features = false, features = ["test"] }
tauri = { workspace = true, features = ["test"] }
tempfile = "3"
mockall = "0.13"
async-trait = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
