[package]
name = "uc-webserver"
version.workspace = true
license.workspace = true
edition = "2021"
description = "Local HTTP and WebSocket server for UniClipboard daemon"

[lib]
name = "uc_webserver"
path = "src/lib.rs"

[dependencies]
uc-application = { path = "../uc-application" }
uc-core = { path = "../uc-core" }
uc-daemon-contract = { path = "../uc-daemon-contract" }
uc-daemon-local = { path = "../uc-daemon-local" }
uc-observability = { path = "../uc-observability" }
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "tokio", "http1", "http2"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"
utoipa = { version = "4", features = ["uuid", "chrono", "url"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
