[package]
name = "uc-e2e-tests"
version = "0.0.0"
license = "AGPL-3.0-only"
edition = "2021"
publish = false
description = "Black-box CLI end-to-end tests for uniclip + uniclipd"

[dependencies]
# Harness utilities (re-exported for integration tests)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
